# dm-codex-py

./: .env.example  README.md  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  alembic.ini  database.py  dm_codex.db  main.py  models.py  schemas.py
api/accounts/: models.py  routes.py
api/auth/: oauth.py  routes.py
api/campaigns/: crud.py  models.py  schemas.py
api/constants/: api.py
api/db/: database.py
api/migrations/: env.py
api/migrations/versions/: 1b149d8350a3_create_users_table.py
api/users/: auth.py  crud.py  models.py  routes.py  schemas.py  views.py
migrations/: env.py
migrations/versions/: 40386af76236_create_users_table.py
users/: models.py  views.py
