[tool.poetry]
name = "dm-codex-py"
version = "0.1.0"
description = "Dungeon Master's Codex API"
authors = ["Lando <landonlewisturner@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
