[tool.poetry]
name = "dm-codex-py"
version = "0.1.0"
description = "Dungeon Master's Codex API"
authors = ["Lando <landonlewisturner@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
