[tool.poetry]
name = "dm-codex-py"
version = "0.1.0"
description = "Dungeon Master's Codex API"
authors = ["Lando <landonlewisturner@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
bcrypt = "^4.0.1"
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
